Fix overlap in navbar

--- a/src/components/ricetech-navbar/_ricetech-navbar.scss
+++ b/src/components/ricetech-navbar/_ricetech-navbar.scss
@@ -1,5 +1,5 @@
 .navbar--logo {
-  max-width: 30px;
+  width: 30px;
   height: 100%;
   padding: 0;
 }
